; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_write.c_fts3IncrmergePush.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/fts3/extr_fts3_write.c_fts3IncrmergePush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i64 }
%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i32, %struct.TYPE_12__, %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i8*, i64, i64 }

@FTS_MAX_APPENDABLE_HEIGHT = common dso_local global i32 0, align 4
@SQLITE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, %struct.TYPE_10__*, i8*, i32)* @fts3IncrmergePush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fts3IncrmergePush(%struct.TYPE_11__* %0, %struct.TYPE_10__* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca %struct.TYPE_10__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_9__*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %6, align 8
  store %struct.TYPE_10__* %1, %struct.TYPE_10__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %20 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %21, i64 0
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp sgt i32 %25, 0
  %27 = zext i1 %26 to i32
  %28 = call i32 @assert(i32 %27)
  store i32 1, i32* %11, align 4
  br label %29

29:                                               ; preds = %269, %4
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* @FTS_MAX_APPENDABLE_HEIGHT, align 4
  %32 = icmp slt i32 %30, %31
  %33 = zext i1 %32 to i32
  %34 = call i64 @ALWAYS(i32 %33)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %272

36:                                               ; preds = %29
  store i32 0, i32* %12, align 4
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 0
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %38, align 8
  %40 = load i32, i32* %11, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %39, i64 %41
  store %struct.TYPE_9__* %42, %struct.TYPE_9__** %13, align 8
  %43 = load i32, i32* @SQLITE_OK, align 4
  store i32 %43, i32* %14, align 4
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 1
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %45, i32 0, i32 0
  %47 = load i8*, i8** %46, align 8
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 1
  %50 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %49, i32 0, i32 1
  %51 = load i64, i64* %50, align 8
  %52 = load i8*, i8** %8, align 8
  %53 = load i32, i32* %9, align 4
  %54 = call i32 @fts3PrefixCompress(i8* %47, i64 %51, i8* %52, i32 %53)
  store i32 %54, i32* %15, align 4
  %55 = load i32, i32* %9, align 4
  %56 = load i32, i32* %15, align 4
  %57 = sub nsw i32 %55, %56
  store i32 %57, i32* %16, align 4
  %58 = load i32, i32* %15, align 4
  %59 = call i32 @sqlite3Fts3VarintLen(i32 %58)
  store i32 %59, i32* %17, align 4
  %60 = load i32, i32* %16, align 4
  %61 = call i32 @sqlite3Fts3VarintLen(i32 %60)
  %62 = load i32, i32* %16, align 4
  %63 = add nsw i32 %61, %62
  %64 = load i32, i32* %17, align 4
  %65 = add nsw i32 %64, %63
  store i32 %65, i32* %17, align 4
  %66 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %67 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %66, i32 0, i32 1
  %68 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %67, i32 0, i32 1
  %69 = load i64, i64* %68, align 8
  %70 = icmp eq i64 %69, 0
  br i1 %70, label %83, label %71

71:                                               ; preds = %36
  %72 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %73 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %72, i32 0, i32 2
  %74 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %73, i32 0, i32 1
  %75 = load i64, i64* %74, align 8
  %76 = load i32, i32* %17, align 4
  %77 = sext i32 %76 to i64
  %78 = add nsw i64 %75, %77
  %79 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %80 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %79, i32 0, i32 0
  %81 = load i64, i64* %80, align 8
  %82 = icmp sle i64 %78, %81
  br i1 %82, label %83, label %203

83:                                               ; preds = %71, %36
  %84 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %85 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %84, i32 0, i32 2
  store %struct.TYPE_12__* %85, %struct.TYPE_12__** %18, align 8
  %86 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %87 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %86, i32 0, i32 1
  %88 = load i64, i64* %87, align 8
  %89 = icmp eq i64 %88, 0
  br i1 %89, label %90, label %118

90:                                               ; preds = %83
  %91 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %92 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %93 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %92, i32 0, i32 0
  %94 = load i64, i64* %93, align 8
  %95 = trunc i64 %94 to i32
  %96 = call i32 @blobGrowBuffer(%struct.TYPE_12__* %91, i32 %95, i32* %14)
  %97 = load i32, i32* %14, align 4
  %98 = load i32, i32* @SQLITE_OK, align 4
  %99 = icmp eq i32 %97, %98
  br i1 %99, label %100, label %117

100:                                              ; preds = %90
  %101 = load i32, i32* %11, align 4
  %102 = trunc i32 %101 to i8
  %103 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %104 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %103, i32 0, i32 0
  %105 = load i8*, i8** %104, align 8
  %106 = getelementptr inbounds i8, i8* %105, i64 0
  store i8 %102, i8* %106, align 1
  %107 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %108 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %107, i32 0, i32 0
  %109 = load i8*, i8** %108, align 8
  %110 = getelementptr inbounds i8, i8* %109, i64 1
  %111 = load i32, i32* %10, align 4
  %112 = call i8* @sqlite3Fts3PutVarint(i8* %110, i32 %111)
  %113 = getelementptr i8, i8* %112, i64 1
  %114 = ptrtoint i8* %113 to i64
  %115 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %116 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %115, i32 0, i32 1
  store i64 %114, i64* %116, align 8
  br label %117

117:                                              ; preds = %100, %90
  br label %118

118:                                              ; preds = %117, %83
  %119 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %120 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %121 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %120, i32 0, i32 1
  %122 = load i64, i64* %121, align 8
  %123 = load i32, i32* %17, align 4
  %124 = sext i32 %123 to i64
  %125 = add nsw i64 %122, %124
  %126 = trunc i64 %125 to i32
  %127 = call i32 @blobGrowBuffer(%struct.TYPE_12__* %119, i32 %126, i32* %14)
  %128 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %129 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %128, i32 0, i32 1
  %130 = load i32, i32* %9, align 4
  %131 = call i32 @blobGrowBuffer(%struct.TYPE_12__* %129, i32 %130, i32* %14)
  %132 = load i32, i32* %14, align 4
  %133 = load i32, i32* @SQLITE_OK, align 4
  %134 = icmp eq i32 %132, %133
  br i1 %134, label %135, label %202

135:                                              ; preds = %118
  %136 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %137 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %136, i32 0, i32 1
  %138 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %137, i32 0, i32 1
  %139 = load i64, i64* %138, align 8
  %140 = icmp ne i64 %139, 0
  br i1 %140, label %141, label %156

141:                                              ; preds = %135
  %142 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %143 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %142, i32 0, i32 0
  %144 = load i8*, i8** %143, align 8
  %145 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %146 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %145, i32 0, i32 1
  %147 = load i64, i64* %146, align 8
  %148 = getelementptr inbounds i8, i8* %144, i64 %147
  %149 = load i32, i32* %15, align 4
  %150 = call i8* @sqlite3Fts3PutVarint(i8* %148, i32 %149)
  %151 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %152 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %151, i32 0, i32 1
  %153 = load i64, i64* %152, align 8
  %154 = getelementptr i8, i8* %150, i64 %153
  %155 = ptrtoint i8* %154 to i64
  store i64 %155, i64* %152, align 8
  br label %156

156:                                              ; preds = %141, %135
  %157 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %158 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %157, i32 0, i32 0
  %159 = load i8*, i8** %158, align 8
  %160 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %161 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %160, i32 0, i32 1
  %162 = load i64, i64* %161, align 8
  %163 = getelementptr inbounds i8, i8* %159, i64 %162
  %164 = load i32, i32* %16, align 4
  %165 = call i8* @sqlite3Fts3PutVarint(i8* %163, i32 %164)
  %166 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %167 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %166, i32 0, i32 1
  %168 = load i64, i64* %167, align 8
  %169 = getelementptr i8, i8* %165, i64 %168
  %170 = ptrtoint i8* %169 to i64
  store i64 %170, i64* %167, align 8
  %171 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %172 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %171, i32 0, i32 0
  %173 = load i8*, i8** %172, align 8
  %174 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %175 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %174, i32 0, i32 1
  %176 = load i64, i64* %175, align 8
  %177 = getelementptr inbounds i8, i8* %173, i64 %176
  %178 = load i8*, i8** %8, align 8
  %179 = load i32, i32* %15, align 4
  %180 = sext i32 %179 to i64
  %181 = getelementptr inbounds i8, i8* %178, i64 %180
  %182 = load i32, i32* %16, align 4
  %183 = call i32 @memcpy(i8* %177, i8* %181, i32 %182)
  %184 = load i32, i32* %16, align 4
  %185 = sext i32 %184 to i64
  %186 = load %struct.TYPE_12__*, %struct.TYPE_12__** %18, align 8
  %187 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %186, i32 0, i32 1
  %188 = load i64, i64* %187, align 8
  %189 = add nsw i64 %188, %185
  store i64 %189, i64* %187, align 8
  %190 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %191 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %190, i32 0, i32 1
  %192 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %191, i32 0, i32 0
  %193 = load i8*, i8** %192, align 8
  %194 = load i8*, i8** %8, align 8
  %195 = load i32, i32* %9, align 4
  %196 = call i32 @memcpy(i8* %193, i8* %194, i32 %195)
  %197 = load i32, i32* %9, align 4
  %198 = sext i32 %197 to i64
  %199 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %200 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %199, i32 0, i32 1
  %201 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %200, i32 0, i32 1
  store i64 %198, i64* %201, align 8
  br label %202

202:                                              ; preds = %156, %118
  br label %258

203:                                              ; preds = %71
  %204 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %205 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %206 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %205, i32 0, i32 0
  %207 = load i32, i32* %206, align 8
  %208 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %209 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %208, i32 0, i32 2
  %210 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %209, i32 0, i32 0
  %211 = load i8*, i8** %210, align 8
  %212 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %213 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %212, i32 0, i32 2
  %214 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %213, i32 0, i32 1
  %215 = load i64, i64* %214, align 8
  %216 = trunc i64 %215 to i32
  %217 = call i32 @fts3WriteSegment(%struct.TYPE_11__* %204, i32 %207, i8* %211, i32 %216)
  store i32 %217, i32* %14, align 4
  %218 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %219 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %218, i32 0, i32 2
  %220 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %219, i32 0, i32 2
  %221 = load i64, i64* %220, align 8
  %222 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %223 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %222, i32 0, i32 0
  %224 = load i64, i64* %223, align 8
  %225 = icmp sge i64 %221, %224
  %226 = zext i1 %225 to i32
  %227 = call i32 @assert(i32 %226)
  %228 = load i32, i32* %11, align 4
  %229 = trunc i32 %228 to i8
  %230 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %231 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %230, i32 0, i32 2
  %232 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %231, i32 0, i32 0
  %233 = load i8*, i8** %232, align 8
  %234 = getelementptr inbounds i8, i8* %233, i64 0
  store i8 %229, i8* %234, align 1
  %235 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %236 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %235, i32 0, i32 2
  %237 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %236, i32 0, i32 0
  %238 = load i8*, i8** %237, align 8
  %239 = getelementptr inbounds i8, i8* %238, i64 1
  %240 = load i32, i32* %10, align 4
  %241 = add nsw i32 %240, 1
  %242 = call i8* @sqlite3Fts3PutVarint(i8* %239, i32 %241)
  %243 = getelementptr i8, i8* %242, i64 1
  %244 = ptrtoint i8* %243 to i64
  %245 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %246 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %245, i32 0, i32 2
  %247 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %246, i32 0, i32 1
  store i64 %244, i64* %247, align 8
  %248 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %249 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %248, i32 0, i32 0
  %250 = load i32, i32* %249, align 8
  store i32 %250, i32* %12, align 4
  %251 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %252 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %251, i32 0, i32 0
  %253 = load i32, i32* %252, align 8
  %254 = add nsw i32 %253, 1
  store i32 %254, i32* %252, align 8
  %255 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %256 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %255, i32 0, i32 1
  %257 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %256, i32 0, i32 1
  store i64 0, i64* %257, align 8
  br label %258

258:                                              ; preds = %203, %202
  %259 = load i32, i32* %14, align 4
  %260 = load i32, i32* @SQLITE_OK, align 4
  %261 = icmp ne i32 %259, %260
  br i1 %261, label %265, label %262

262:                                              ; preds = %258
  %263 = load i32, i32* %12, align 4
  %264 = icmp eq i32 %263, 0
  br i1 %264, label %265, label %267

265:                                              ; preds = %262, %258
  %266 = load i32, i32* %14, align 4
  store i32 %266, i32* %5, align 4
  br label %274

267:                                              ; preds = %262
  %268 = load i32, i32* %12, align 4
  store i32 %268, i32* %10, align 4
  br label %269

269:                                              ; preds = %267
  %270 = load i32, i32* %11, align 4
  %271 = add nsw i32 %270, 1
  store i32 %271, i32* %11, align 4
  br label %29

272:                                              ; preds = %29
  %273 = call i32 @assert(i32 0)
  store i32 0, i32* %5, align 4
  br label %274

274:                                              ; preds = %272, %265
  %275 = load i32, i32* %5, align 4
  ret i32 %275
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @ALWAYS(i32) #1

declare dso_local i32 @fts3PrefixCompress(i8*, i64, i8*, i32) #1

declare dso_local i32 @sqlite3Fts3VarintLen(i32) #1

declare dso_local i32 @blobGrowBuffer(%struct.TYPE_12__*, i32, i32*) #1

declare dso_local i8* @sqlite3Fts3PutVarint(i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @fts3WriteSegment(%struct.TYPE_11__*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
